<resources>
    <string name="app_name">TelrosApps</string>
    <string name="login">Войти</string>
    <string name="patronymic">Отчество</string>
    <string name="date_of_birth">Дата Рождения</string>
    <string name="email1">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="full_name">Full name</string>
    <string name="telros_form">Telros form</string>
    <string name="register_user">Зарегистрироваться</string>
    <string name="telros">Telros</string>
    <string name="fullName">Фамилия</string>
    <string name="fullName2">Имя</string>
    <string name="emailF">Электронная почта</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="register">Регистрация</string>
</resources>